--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -20,10 +20,11 @@
   },
   "dependencies": {
     "@toa.io/console": "0.24.0-alpha.11",
+    "@toa.io/conveyor": "0.24.0-alpha.11",
     "@toa.io/core": "0.24.0-alpha.11",
     "@toa.io/generic": "0.24.0-alpha.11",
     "@toa.io/pointer": "0.24.0-alpha.11",
-    "mongodb": "5.9.1",
+    "mongodb": "6.3.0",
     "saslprep": "1.0.3"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
