--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "jest": "29.5.0",
     "jest-diff": "29.6.2",
     "knex": "2.4.2",
-    "mongodb": "5.9.1",
     "randomstring": "1.3.0",
+    "testcontainers": "10.2.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1"
   },
@@ -62,7 +62,7 @@
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
     "test:stage": "npx jest --roots userland/example/stage --testPathIgnorePatterns .*/transpiled/",
     "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
-    "features": "npx cucumber-js && npm run features --workspaces --if-present",
+    "features": "npx cucumber-js -t 'not @skip' && npm run features --workspaces --if-present",
     "test:samples:unit": "toa replay userland/example/components/*",
     "test:samples:all": "TOA_DEV=1 toa replay userland/example",
     "test:all": "npm run test && npm run test:integration && npm run test:stage && npm run features",
