--- a/operations/package.json
+++ b/operations/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@toa.io/filesystem": "0.24.0-alpha.12",
     "@toa.io/generic": "0.24.0-alpha.12",
+    "@toa.io/norm": "0.24.0-alpha.12",
     "@toa.io/yaml": "0.24.0-alpha.12",
     "execa": "5.1.1",
     "fs-extra": "11.1.1"
