--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -29,8 +29,9 @@
     "dotenv": "16.3.1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.435.0",
-    "@aws-sdk/lib-storage": "3.437.0",
+    "@aws-sdk/client-s3": "3.481.0",
+    "smithy-node-native-fetch": "^1.0.6",
+    "@aws-sdk/lib-storage": "3.481.0",
     "@toa.io/generic": "0.20.0-alpha.2",
     "@toa.io/http": "0.24.0-alpha.18",
     "error-value": "0.3.0",
