--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -22,6 +22,7 @@ jobs:
         with:
           node-version: 18
       - uses: azure/setup-helm@v3
+      - run: docker-compose up -d
 
       - name: Install dependencies
         run: npm ci
