chore: fix file name

--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -6,7 +6,7 @@ on:
       - "**/*.js"
       - "**/*.ts"
       - "package-lock.json"
-      - ".github/workflows/unit-test.yml"
+      - ".github/workflows/unit-test.yaml"
 
   push:
     branches:
