--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -35,4 +35,8 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
+          flags: unit
           fail_ci_if_error: true
+
+      - name: Run features
+        run: npm run features
