--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: 18
       - uses: azure/setup-helm@v3
-      - run: docker-compose up -d
+      - run: docker compose up -d
 
       - name: Install dependencies
         run: npm ci
@@ -38,5 +38,3 @@ jobs:
           flags: unit
           fail_ci_if_error: true
 
-      - name: Run features
-        run: npm run features
