fix: convert to proper Typescript composite project

--- a/extensions/exposition/tsconfig.json
+++ b/extensions/exposition/tsconfig.json
@@ -1,12 +1,25 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./transpiled"
+    "composite": true,
+    "outDir": "./transpiled",
+    "rootDir": "./source"
   },
   "include": [
     "source"
   ],
   "exclude": [
     "**/*.test.ts"
+  ],
+  "references": [
+    {
+      "path": "components/identity.basic"
+    },
+    {
+      "path": "components/identity.tokens"
+    },
+    {
+      "path": "components/identity.roles"
+    }
   ]
 }
