--- a/extensions/storages/tsconfig.json
+++ b/extensions/storages/tsconfig.json
@@ -1,12 +1,15 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./transpiled"
+    "composite": true,
+    "outDir": "./transpiled",
+    "rootDir": "./source"
   },
   "include": [
     "source"
   ],
   "exclude": [
+    "source/test/",
     "**/*.test.ts"
   ]
 }
