--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,12 +19,13 @@
     }
   ],
   "search.exclude": {
-    "**/node_modules": true,
-    "**/transpiled": true
+    "**/node_modules/**": true,
+    "**/transpiled/**": true
   },
   "files.watcherExclude": {
     "**/.git/objects/**": true,
     "**/node_modules/**": true,
     "**/transpiled/**": true
   },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
