--- a/extensions/exposition/components/identity.roles/tsconfig.json
+++ b/extensions/exposition/components/identity.roles/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "outDir": "./operations",
+    "rootDir": "./source"
   },
   "include": [
     "source"
