--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
   "bin": {
     "toa": "runtime/runtime/bin/toa"
   },
-  "peerDependencies": {
-    "typescript": "^4.9.5"
-  },
   "devDependencies": {
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
@@ -52,6 +49,7 @@
     "msw": "2.0.11",
     "randomstring": "1.3.0",
     "testcontainers": "10.2.2",
+    "typescript": "~5.3.3",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1"
   },
@@ -75,8 +73,9 @@
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
     "ci": "rm -rf node_modules && npm exec --workspaces -c \"rm -rf node_modules\" && npm i",
-    "transpile": "npx lerna@7.3.0 run transpile",
-    "retranspile": "npm exec --workspaces -c \"rm -rf transpiled\" && npm run transpile",
+    "clean": "tsc --build --clean",
+    "transpile": "tsc --build",
+    "retranspile": "npm run clean && npm run transpile -- --force",
     "compose": "docker compose rm -f -s -v && docker compose up -d"
   },
   "jest": {
