--- a/extensions/realtime/features/steps/tsconfig.json
+++ b/extensions/realtime/features/steps/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "outDir": "/dev/null",
+    "noEmit": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
   }
 }
