--- a/package.json
+++ b/package.json
@@ -37,21 +37,23 @@
     "@types/jest": "29.5.3",
     "@types/node": "20.8.10",
     "@types/randomstring": "1.1.8",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
     "clone-deep": "4.0.1",
     "cucumber-tsflow": "4.2.1",
     "dotenv": "16.0.3",
-    "eslint-config-standard-with-typescript": "38.0.0",
+    "eslint-config-standard-with-typescript": "43.0.0",
     "execa": "5.1.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-diff": "29.6.2",
     "knex": "2.4.2",
-    "msw": "2.0.11",
+    "msw": "2.0.13",
     "randomstring": "1.3.0",
     "testcontainers": "10.2.2",
-    "typescript": "~5.3.3",
     "ts-jest": "29.1.0",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.2",
+    "typescript": "~5.3.3"
   },
   "scripts": {
     "prepare": "npx husky install",
@@ -82,9 +84,19 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "coverageProvider": "v8",
-    "coverageReporters": ["lcov", "text", "text-summary", "json"],
-    "coveragePathIgnorePatterns": ["node_modules/", "transpiled/"],
-    "collectCoverageFrom": ["**/source/**"],
+    "coverageReporters": [
+      "lcov",
+      "text",
+      "text-summary",
+      "json"
+    ],
+    "coveragePathIgnorePatterns": [
+      "node_modules/",
+      "transpiled/"
+    ],
+    "collectCoverageFrom": [
+      "**/source/**"
+    ],
     "roots": [
       "<rootDir>/runtime",
       "<rootDir>/connectors",
