--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -24,8 +24,10 @@
     "@toa.io/console": "0.24.0-alpha.18",
     "@toa.io/generic": "0.24.0-alpha.18",
     "@toa.io/yaml": "0.24.0-alpha.18",
-    "clone-deep": "4.0.1",
     "error-value": "0.3.0"
+  },
+  "devDependencies": {
+    "clone-deep": "4.0.1"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
 }
