--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,9 +20,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
-      - uses: azure/setup-helm@v3
-      - run: docker compose up -d --quiet-pull
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
@@ -30,11 +28,10 @@ jobs:
           HUSKY: 0
 
       - name: Run unit tests
-        run: npx jest --coverage --testTimeout=30000 --reporters=github-actions --reporters=summary
+        run: npm test -- --coverage --testTimeout=30000 --reporters=github-actions --reporters=summary
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
           flags: unit
           fail_ci_if_error: true
-
