--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,17 +18,21 @@ jobs:
 
     steps:
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-
+      - name: Setup Helm
+        uses: azure/setup-helm@v3
       - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - run: npm install
-      - run: npm test
+        uses: actions/checkout@v4
+      - name: Run environment
+        run: docker compose up -d --quiet-pull
+      - name: Install dependencies
+        run: npm ci
+        env:
+          HUSKY: 0
+      - name: Run tests
+        run: npx jest --testTimeout=30000
 
   publish:
     if: github.event.pull_request.merged == true
