--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -27,8 +27,11 @@ jobs:
         env:
           HUSKY: 0
 
+      - name: Run lint
+        run: npm run test:lint
+
       - name: Run unit tests
-        run: npm test -- --coverage --testTimeout=30000 --reporters=github-actions --reporters=summary
+        run: npm test:unit -- --coverage --testTimeout=30000 --reporters=github-actions --reporters=summary
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
