feat: implementing Bearer authentication

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,4 +1,5 @@
-extends: standard-with-typescript
+extends:
+  - standard-with-typescript
 overrides:
   - files: ['*.ts']
     rules:
@@ -67,11 +68,24 @@ overrides:
         - error
         - always
         - null: always
+      '@typescript-eslint/no-unsafe-argument': warn
+      '@typescript-eslint/no-non-null-assertion': warn
+      '@typescript-eslint/non-nullable-type-assertion-style': warn
+      '@typescript-eslint/unbound-method': warn
 
+  - files: ["*.test.ts", "**/test/**"]
+    extends: 'plugin:@typescript-eslint/disable-type-checked'
+    env:
+      jest: true
+  - files: ['**/features/**/*.ts']
+    extends: 'plugin:@typescript-eslint/disable-type-checked'
+    rules:
+       '@typescript-eslint/prefer-nullish-coalescing': 'off'
+       '@typescript-eslint/strict-boolean-expressions': 'off'
 parserOptions:
-  project: ./tsconfig.json
+  project: true
 env:
-  jest: true
+  node: true
 ignorePatterns:
   - '*.d.ts'
   - '*.js'
