--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
   "bin": {
     "toa": "runtime/runtime/bin/toa"
   },
-  "peerDependencies": {
-    "typescript": "^4.9.5"
-  },
   "devDependencies": {
     "@commitlint/cli": "14.1.0",
     "@commitlint/config-conventional": "14.1.0",
@@ -43,17 +40,21 @@
     "clone-deep": "4.0.1",
     "cucumber-tsflow": "4.2.1",
     "dotenv": "16.0.3",
-    "eslint-config-standard-with-typescript": "38.0.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard-with-typescript": "43.0.1",
     "execa": "5.1.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
     "jest-diff": "29.6.2",
+    "json-schema-to-typescript": "13.1.2",
     "knex": "2.4.2",
-    "msw": "2.0.11",
+    "msw": "2.1.5",
     "randomstring": "1.3.0",
     "testcontainers": "10.2.2",
     "ts-jest": "29.1.0",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "prepare": "npx husky install",
@@ -83,9 +84,19 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "coverageProvider": "v8",
-    "coverageReporters": ["lcov", "text", "text-summary", "json"],
-    "coveragePathIgnorePatterns": ["node_modules/", "transpiled/"],
-    "collectCoverageFrom": ["**/source/**"],
+    "coverageReporters": [
+      "lcov",
+      "text",
+      "text-summary",
+      "json"
+    ],
+    "coveragePathIgnorePatterns": [
+      "node_modules/",
+      "transpiled/"
+    ],
+    "collectCoverageFrom": [
+      "**/source/**"
+    ],
     "roots": [
       "<rootDir>/runtime",
       "<rootDir>/connectors",
