--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -36,6 +36,6 @@
     "error-value": "0.3.0",
     "matchacho": "0.6.0",
     "msgpackr": "1.10.1",
-    "smithy-node-native-fetch": "^1.0.6"
+    "smithy-node-native-fetch": "1.0.6"
   }
 }
