feat(operations): add optional secrets deployment

--- a/operations/src/deployment/chart/templates/variables.yaml
+++ b/operations/src/deployment/chart/templates/variables.yaml
@@ -8,5 +8,8 @@
     secretKeyRef:
       name: {{ .secret.name }}
       key: {{ .secret.key }}
+      {{- if .secret.optional }}
+      optional: {{ .secret.optional }}
+      {{- end }}
   {{- end }}
 {{- end }}
