--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -50,9 +50,7 @@
     "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
-    "@types/fs-extra": "11.0.4",
-    "@types/negotiator": "0.6.1",
-    "fs-extra": "11.1.1"
+    "@types/negotiator": "0.6.1"
   },
   "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e"
 }
