--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -22,7 +22,6 @@
     "@toa.io/schemas": "0.24.0-alpha.18",
     "@toa.io/streams": "0.24.0-alpha.18",
     "bcryptjs": "2.4.3",
-    "cors": "2.8.5",
     "error-value": "0.3.0",
     "express": "4.18.2",
     "js-yaml": "4.1.0",
@@ -51,9 +50,7 @@
     "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
-    "@types/fs-extra": "11.0.4",
-    "@types/negotiator": "0.6.1",
-    "fs-extra": "11.1.1"
+    "@types/negotiator": "0.6.1"
   },
   "gitHead": "24d68d70a56717f2f4441cc9884a60f9fee0863e"
 }
