refactor(core)!: rename Entity's property `initialized` to `dependent`

--- a/extensions/exposition/components/identity.federation/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.federation/manifest.toa.yaml
@@ -15,7 +15,7 @@ entity:
       - iss
       - sub
     additionalProperties: false
-  initialized: true
+  dependent: true
 
 operations:
   transit:
