--- a/integration/dummies/dependent/manifest.toa.yaml
+++ b/integration/dummies/dependent/manifest.toa.yaml
@@ -1,8 +1,8 @@
 namespace: dummies
-name: initialized
+name: dependent
 
 entity:
-  initialized: true
+  dependent: true
   schema:
     properties:
       a:
