--- a/integration/context/credits/manifest.toa.yaml
+++ b/integration/context/credits/manifest.toa.yaml
@@ -7,7 +7,7 @@ entity:
       balance:
         type: integer
         default: 10
-  initialized: true
+  dependent: true
 
 operations:
   transit:
