--- a/runtime/prototype/manifest.toa.yaml
+++ b/runtime/prototype/manifest.toa.yaml
@@ -4,9 +4,12 @@ entity:
   schema:
     properties:
       id:
-        $ref: 'https://schemas.toa.io/0.0.0/definitions#/definitions/id'
+        type: string
+        pattern: ^[a-fA-F0-9]{32}$
       _version:
         type: integer
+        minimum: 0
+        default: 0
     required: [id]
 
 operations:
