chore: replace `/dev/null` with `noEmit`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "/dev/null",
+    "noEmit": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "ESNext",
