--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-diff": "29.6.2",
     "json-schema-to-typescript": "13.1.2",
     "knex": "2.4.2",
+    "lerna": "7.3.0",
     "msw": "2.1.5",
     "randomstring": "1.3.0",
     "testcontainers": "10.2.2",
@@ -57,26 +58,26 @@
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "prepare": "npx husky install",
+    "prepare": "husky install",
     "install": "npm run transpile",
     "test": "npm run test:lint && npm run test:unit",
-    "test:lint": "npx eslint .",
-    "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
-    "test:stage": "npx jest --roots userland/example/stage --testPathIgnorePatterns .*/transpiled/",
-    "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
-    "features": "npx cucumber-js -t 'not @skip' && npm run features --workspaces --if-present",
+    "test:lint": "eslint .",
+    "test:unit": "jest --roots runtime connectors extensions operations libraries features userland",
+    "test:stage": "jest --roots userland/example/stage --testPathIgnorePatterns .*/transpiled/",
+    "test:integration": "jest --roots integration --runInBand --testTimeout 180000",
+    "features": "cucumber-js -t 'not @skip' && npm run features --workspaces --if-present",
     "test:samples:unit": "toa replay userland/example/components/*",
     "test:samples:all": "TOA_DEV=1 toa replay userland/example",
     "test:all": "npm run test && npm run test:integration && npm run test:stage && npm run features",
-    "lint": "npx eslint . --fix",
+    "lint": "eslint . --fix",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
-    "version:local": "npx lerna@7.3.0 version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
-    "publish:canary": "npx lerna@7.3.0 publish --canary --preid local --registry http://localhost:4873",
+    "version:local": "lerna version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
+    "publish:canary": "lerna publish --canary --preid local --registry http://localhost:4873",
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
     "ci": "rm -rf node_modules && npm exec --workspaces -c \"rm -rf node_modules\" && npm i",
-    "transpile": "npx lerna@7.3.0 run transpile",
+    "transpile": "lerna run transpile",
     "retranspile": "npm exec --workspaces -c \"rm -rf transpiled\" && npm run transpile",
     "compose": "docker compose rm -f -s -v && docker compose up -d"
   },
