chore: return `outDir: /dev/null`
Prevent IDE from creating garbage when running tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "outDir": "/dev/null",
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "ESNext",
