feat(exposition): add initial `meta` value

--- a/extensions/exposition/components/octets.storage/manifest.toa.yaml
+++ b/extensions/exposition/components/octets.storage/manifest.toa.yaml
@@ -10,6 +10,7 @@ operations:
       storage*: string
       request*: ~
       accept: string
+      meta: <string>
   fetch: &simple
     bindings: ~
     input:
