--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "@toa.io/extensions.storages": "0.24.0-alpha.22",
-    "@toa.io/http": "0.24.0-alpha.22",
+    "@toa.io/agent": "0.24.0-alpha.22",
     "@types/bcryptjs": "2.4.3",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
