--- a/extensions/storages/package.json
+++ b/extensions/storages/package.json
@@ -32,7 +32,7 @@
     "@aws-sdk/client-s3": "3.481.0",
     "@aws-sdk/lib-storage": "3.481.0",
     "@toa.io/generic": "0.20.0-alpha.2",
-    "@toa.io/http": "0.24.0-alpha.22",
+    "@toa.io/agent": "0.24.0-alpha.22",
     "error-value": "0.3.0",
     "matchacho": "0.6.0",
     "msgpackr": "1.10.1",
