feat: add `bridges.bash`

--- a/runtime/core/package.json
+++ b/runtime/core/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/toa-io/toa/issues"
   },
   "main": "src/index.js",
-  "types": "types/index.d.ts",
+  "types": "types/index.ts",
   "publishConfig": {
     "access": "public"
   },
