feat(exposition)!: add `content-meta` header (#511)
* fix(http): support multiple header values

* chore: add `lerna` as dev dependency

* refactor(storages): use random directory by default for `tmp`

* feat(storages): add initial `meta` value

* chore: return `outDir: /dev/null`

Prevent IDE from creating garbage when running tests

* docs(storages): add initial `meta`

* feat(exposition): add initial `meta` value

* test(http): fix test due to `headers` type change

* refactor(http)!: rename to `agent`

* refactor(agent): add default value for `captures` constructor argument

* docs(exposition): clarify sentence

* refactor(storages): make `directory` parameter required

* test(exposition): fix `content-meta` scenario

Add an exclusive path for the scenario as `content-meta`
header is ignored for existing Entry
(which is created by other scenarios).

* chore: fix typings

* feat(storages): add annotation validation

* style(exposition): revert `octets:fetch` schema

It may be confusing,
as default values actually specified in the code,
since the value of the directive may be `null`.

* refactor(exposition): allow equal sign in meta-header values

* feat(schemas): add error message prefix

* refactor(storages): strengthen schemas

* refactor(storages): add annotation error details

It is required because `oneOf`
schema is used for the annotation validation.

* refactor(storages): strengthen S3 annotation schema

* style(storages): add comments

---------

Co-authored-by: Konstantin Vyatkin <tino@vtkn.io>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "noEmit": true,
+    "outDir": "/dev/null",
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "ESNext",
