--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "cluster": "chmod +x ./integration/scripts/cluster.sh && ./integration/scripts/cluster.sh",
     "buildx": "docker buildx create --name toa --use && docker buildx inspect --bootstrap",
     "setup": "docker compose up -d && npm run cluster && npm run buildx && npm run publish:local && npm ci && toa deploy ./integration/context",
-    "ci": "rm -rf node_modules && npm exec --workspaces -c \"rm -rf node_modules\" && npm i",
+    "ci": "rm -rf node_modules && npm exec --workspaces -c \"rm -rf node_modules transpiled\" && npm i",
     "transpile": "lerna run transpile",
     "retranspile": "npm exec --workspaces -c \"rm -rf transpiled\" && npm run transpile",
     "compose": "docker compose rm -f -s -v && docker compose up -d"
