feat(exposition): add workflow parameters
Close #518

--- a/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/octets.tester/manifest.toa.yaml
@@ -9,8 +9,10 @@ operations:
       storage*: string
       path*: string
       entry: object
+      parameters: object
   bar: *operation
   baz: *operation
   err: *operation
   echo: *operation
+  concat: *operation
   diversify: *operation
