ci: unpin lerna

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -72,9 +72,9 @@ jobs:
           npm install
 
           if [ ${{ github.base_ref }} = release ]; then
-            npx lerna@7.3.0 publish --conventional-graduate --no-commit-hooks --no-changelog --yes --message "ci: %s" --sign-git-commit
+            npx lerna publish --conventional-graduate --no-commit-hooks --no-changelog --yes --message "ci: %s" --sign-git-commit
           else
-            npx lerna@7.3.0 publish --conventional-prerelease --preid alpha --dist-tag alpha --no-commit-hooks --no-changelog --yes --message "ci: %s" --git-tag-command "echo %s" --sign-git-commit
+            npx lerna publish --conventional-prerelease --preid alpha --dist-tag alpha --no-commit-hooks --no-changelog --yes --message "ci: %s" --git-tag-command "echo %s" --sign-git-commit
           fi
 
           git fetch
