--- a/extensions/exposition/components/identity.federation/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.federation/manifest.toa.yaml
@@ -60,6 +60,18 @@ configuration:
                 type: string
               uniqueItems: true
               minItems: 1
+            secrets:
+              description: Symmetric encryption secrets
+              type: object
+              patternProperties:
+                ^HS\d{3}$:
+                  type: object
+                  patternProperties:
+                    ^\w+$:
+                      type: string
+                  minProperties: 1
+              additionalProperties: false
+              minProperties: 1
           required:
             - issuer
       explicit_identity_creation:
