feat(node): add component version resolution

--- a/features/steps/.workspace/components/collection/dummies.node/manifest.toa.yaml
+++ b/features/steps/.workspace/components/collection/dummies.node/manifest.toa.yaml
@@ -1,4 +1,4 @@
-name: three
+name: node
 namespace: dummies
 
 entity:
@@ -15,7 +15,3 @@ operations:
     input:
       foo: .
       bar: .
-
-exposition:
-  /:
-    POST: transit
