test(exposition): add `etag` and OCC

--- a/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
@@ -8,8 +8,11 @@ entity:
     temperature?: number
 
 operations:
-  transit:
+  create:
     query: false
+    forward: transit
+  transit:
+    concurrency: retry
     input:
       title*: ~
       volume*: ~
