feat(exposition): add optimistic concurrency control (#527)
* docs(exposition): add OCC

* test(exposition): add `etag` and OCC

* refactor(core): move `_version` increment to core

* test: fix tests using `_version`

* feat(exposition): add `etag` and OCC

* fix(norm): fix custom storage path resolution

* test(features): fix `proto.dummy` component

* feat(exposition): add 400 on invalid `etag`

--- a/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/pots/manifest.toa.yaml
@@ -8,11 +8,17 @@ entity:
     temperature?: number
 
 operations:
-  transit:
+  create:
     query: false
+    forward: transit
     input:
-      title*: ~
-      volume*: ~
+      title*: .
+      volume*: .
+  transit:
+    concurrency: retry
+    input:
+      title: .
+      volume: .
   observe:
     output:
       id: string
