--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -25,9 +25,7 @@
     "@toa.io/generic": "1.0.0-alpha.4",
     "@toa.io/norm": "1.0.0-alpha.4",
     "@toa.io/schema": "1.0.0-alpha.4",
-    "dotenv": "16.1.1"
-  },
-  "devDependencies": {
+    "dotenv": "16.1.1",
     "clone-deep": "4.0.1"
   },
   "gitHead": "61c8e74a336385265767e9fd37d49128cb51b17f"
