fix(exposition): add `io:output` permissions to `identity.roles` exposition

--- a/extensions/exposition/components/identity.roles/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.roles/manifest.toa.yaml
@@ -26,7 +26,9 @@ exposition:
   isolated: true
   /:identity:
     auth:role: system:identity:roles
-    POST: transit
+    POST:
+      io:output: [id]
+      endpoint: transit
     GET:
       io:output: true
       auth:id: identity
