feat(exposition): add unique index to `identity.basic`

--- a/extensions/exposition/components/identity.basic/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.basic/manifest.toa.yaml
@@ -6,6 +6,8 @@ entity:
   schema:
     username*: string
     password*: string
+  unique:
+    username: [username]
   dependent: true
 
 operations:
