chore: lint only changed files

--- a/package.json
+++ b/package.json
@@ -60,14 +60,13 @@
   "scripts": {
     "prepare": "husky install",
     "install": "npm run transpile",
-    "test": "npm run test:lint && npm run test:unit",
-    "test:lint": "eslint .",
+    "test": "npm run lint && npm run test:unit",
     "test:unit": "jest --roots runtime connectors extensions operations libraries features userland",
     "test:stage": "jest --roots userland/example/stage --testPathIgnorePatterns .*/transpiled/",
     "test:integration": "jest --roots integration --runInBand --testTimeout 180000",
     "features": "cucumber-js -t 'not @skip' && npm run features --workspaces --if-present",
     "test:all": "npm run test && npm run test:integration && npm run test:stage && npm run features",
-    "lint": "eslint . --fix",
+    "lint": "eslint $(git diff --name-only HEAD | grep -E '\\.(js|ts)$' | xargs)",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:local": "lerna version --conventional-prerelease --preid local --no-commit-hooks --no-changelog --yes --no-git-tag-version && git commit -am 'chore: local bump' --no-verify",
     "publish:canary": "lerna publish --canary --preid local --registry http://localhost:4873",
