feat: add storage indexes (#541)
* feat(core): add unique indexes

* feat(core): add indexes

* refactor(mongo): remove values from DuplicateException

* feat(exposition): add unique index to `identity.basic`

* chore: lint only changed files

* ci: fix `pr` workflow

* fix(operations): fix `compose` in docker

* ci: fix `pr` workflow

* refactor(mongo): add singleton connection

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -25,7 +25,7 @@ jobs:
           HUSKY: 0
 
       - name: Run lint
-        run: npm run test:lint
+        run: npx eslint .
 
       - name: Run unit tests
         run: npm run test:unit -- --coverage --testTimeout=30000 --reporters=github-actions --reporters=summary
