--- a/extensions/exposition/components/identity.bans/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.bans/manifest.toa.yaml
@@ -1,6 +1,5 @@
 namespace: identity
 name: bans
-version: 0.0.0
 
 entity:
   schema:
@@ -15,5 +14,6 @@ operations:
 exposition:
   isolated: true
   /:id:
+    io:output: false
     auth:role: system:identity:bans
     PUT: assign
