feat(exposition): add roles delegation

--- a/extensions/exposition/components/identity.federation/tsconfig.json
+++ b/extensions/exposition/components/identity.federation/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./operations",
+    "outDir": "./operations"
   },
   "include": [
     "source"
