refactor(core): remove assignment to dependant

--- a/runtime/prototype/manifest.toa.yaml
+++ b/runtime/prototype/manifest.toa.yaml
@@ -14,7 +14,7 @@ entity:
         type: integer
       _updated:
         type: integer
-    required: [id, _created]
+    required: [id]
 
 operations:
   transit:
