feat(core): add storage timestamps (#557)
* feat(core): add storage timestamps

* test(core): fix tests

* refactor(core): remove assignment to dependant

--- a/runtime/prototype/manifest.toa.yaml
+++ b/runtime/prototype/manifest.toa.yaml
@@ -10,6 +10,10 @@ entity:
         type: integer
         minimum: 0
         default: 0
+      _created:
+        type: integer
+      _updated:
+        type: integer
     required: [id]
 
 operations:
