--- a/extensions/exposition/features/steps/components/echo/manifest.toa.yaml
+++ b/extensions/exposition/features/steps/components/echo/manifest.toa.yaml
@@ -1,5 +1,4 @@
 name: echo
-version: 0.0.0
 
 operations:
   compute:
@@ -8,3 +7,8 @@ operations:
   affect:
     input:
       name*: string
+  identity:
+    input:
+      identity:
+        id: string
+        roles: [string]
