--- a/extensions/exposition/components/identity.tokens/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.tokens/manifest.toa.yaml
@@ -30,6 +30,7 @@ operations:
     concurrency: retry
 
 receivers:
+  identity.bans.created: revoke
   identity.bans.updated: revoke
 
 configuration:
