fix(exposition): fix `bans`

--- a/extensions/exposition/components/identity.bans/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.bans/manifest.toa.yaml
@@ -3,8 +3,8 @@ name: bans
 
 entity:
   schema:
-    banned: false
-    originator: string
+    banned*: false
+    originator*: string
     comment: string
   dependent: true
 
