test(exposition): add `@security` tags

--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -41,7 +41,8 @@
     "transpile:roles": "tsc -p ./components/identity.roles",
     "pretranspile:federation": "js-yaml components/identity.federation/manifest.toa.yaml | jq -M '{ type: \"object\", properties: {configuration: .configuration.schema, entity: .entity.schema }, additionalProperties: false}' > schemas.json && json2ts -i schemas.json -o components/identity.federation/source/schemas.ts && rm schemas.json",
     "transpile:federation": "tsc -p ./components/identity.federation",
-    "features": "cucumber-js"
+    "features": "cucumber-js",
+    "features:security": "cucumber-js --tags @security"
   },
   "devDependencies": {
     "@toa.io/agent": "1.0.0-alpha.13",
