refactor(core)!: rename `dependent` into `associated`

--- a/extensions/exposition/components/identity.bans/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.bans/manifest.toa.yaml
@@ -6,7 +6,7 @@ entity:
     banned*: false
     originator*: string
     comment: string
-  dependent: true
+  associated: true
 
 operations:
   transit:
