--- a/extensions/exposition/components/identity.basic/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.basic/manifest.toa.yaml
@@ -7,7 +7,7 @@ entity:
     password*: string
   unique:
     username: [username]
-  dependent: true
+  associated: true
 
 operations:
   transit:
