--- a/integration/dummies/a.v2/manifest.toa.yaml
+++ b/integration/dummies/a.v2/manifest.toa.yaml
@@ -7,7 +7,7 @@ entity:
       title: string
       length: integer
     required: [title]
-  dependent: true
+  associated: true
 
 operations:
   create:
