--- a/integration/dummies/dependent/manifest.toa.yaml
+++ b/integration/dummies/dependent/manifest.toa.yaml
@@ -1,8 +1,8 @@
 namespace: dummies
-name: dependent
+name: associated
 
 entity:
-  dependent: true
+  associated: true
   schema:
     properties:
       a:
