--- a/extensions/exposition/components/identity.federation/manifest.toa.yaml
+++ b/extensions/exposition/components/identity.federation/manifest.toa.yaml
@@ -15,7 +15,7 @@ entity:
       - iss
       - sub
     additionalProperties: false
-  dependent: true
+  associated: true
 
 operations:
   transit:
